--- a/EjemplosASP/Atributo Required/Views/Personas/Index.cshtml
+++ b/EjemplosASP/Atributo Required/Views/Personas/Index.cshtml
@@ -17,6 +17,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Apellido)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Edad)
+        </th>
         <th></th>
     </tr>
 
@@ -27,6 +30,9 @@
         </td>
         <td>
             @Html.DisplayFor(modelItem => item.Apellido)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.Edad)
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
